--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "type": "module",
   "scripts": {
     "debug": "nodemon -r dotenv/config --inspect index.js",
-    "serve": "nodemon -r dotenv/config index.js"
+    "serve": "nodemon -r dotenv/config index.js",
+    "format:check": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auto-bind": "^5.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
@@ -20,6 +25,11 @@
   },
   "devDependencies": {
     "debug": "^4.3.4",
+    "eslint": "^8.26.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "supports-color": "^9.2.3"
   }
