--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "auto-bind": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "mongoose-timestamp": "^0.6.0"
   },
